fix image too large issue

--- a/static/css/awesome.css
+++ b/static/css/awesome.css
@@ -4,6 +4,7 @@ html {
 body {
   min-height: 100%;
 }
+
 .blog-post-meta {
     margin-bottom: 20px;
     color: #999;
@@ -43,7 +44,11 @@ body {
  * Comment makeup.
  */
 .content {
-    font-size: 18px;
+    font-size: 16px;
+}
+
+.content img {
+  max-width: 100%;
 }
 .comment-user-name {
     color: #B71C1C;
@@ -52,7 +57,7 @@ body {
     color: #999;
 }
 .comment-content {
-    font-size: 18px;
+    font-size: 16px;
 }
 .comment-box {
     margin-bottom: 5px;
